on a flexible and high quality code base designed for small 
to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.5.0.3 (development) -----

2005-01-23, KATO
  Added more configurability to the set properties
  feature in egate_create (config file updated)
    - zentrack_2/includes/egate_utils.php 1.39
    - zentrack_2/install/egate_config.php.default 1.13
  Updated install, help, and upgrade docs
    - zentrack_2/HELP 1.10
    - zentrack_2/INSTALL.README 1.26
    - zentrack_2/UPGRADE.readme 1.21
    - zentrack_2/install/UPGRADE_mssqlserver.sql 1.26
    - zentrack_2/install/UPGRADE_mysql.sql 1.34
    - zentrack_2/install/UPGRADE_oracle.sql 1.33
    - zentrack_2/install/UPGRADE_postgres.sql 1.25
    - zentrack_2/install/previous/2.5.0.2.UPGRADE_mssqlserver.sql 1.1
    - zentrack_2/install/previous/2.5.0.2.UPGRADE_mysql.sql 1.1
    - zentrack_2/install/previous/2.5.0.2.UPGRADE_oracle.sql 1.1
    - zentrack_2/install/previous/2.5.0.2.UPGRADE_postgres.sql 1.1

2005-01-22, kato
  Added ability to set properties(such as bin) via
  simple text in egate_create.php
    - zentrack_2/includes/egate_utils.php 1.37
  Fixed bcc address in egate_config and 
  added blurb to the admin help email to explain
  create vs admin interfaces
    - zentrack_2/includes/egate_utils.php 1.38
    - zentrack_2/includes/templates/email/form_help.template 1.5

2005-01-18, kato
  Added export to CVS feature to search page
    - zentrack_2/includes/templates/searchList.php 1.15
    - zentrack_2/www/exportSearch.php 1.1
    - zentrack_2/www/search.php 1.9

2004-11-26, cfalonso
  Worked on translations
    - zentrack_2/includes/editCustomSubmit.php 1.5
    - zentrack_2/includes/editTicketSubmit.php 1.10
    - zentrack_2/includes/headerInc.php 1.51